--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h>sai dolesh </h>
+    <h1>sai dolesh </h1>
+    <a href="page2.html">page2</a>
 </body>
 </html>
