--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sai dolesh</h1>
+    <h1>page2</h1>
+    <h3>press the below link to go to the home page</h3>
     <a href="index.html">home</a>
 </body>
 </html>
