--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sai dolesh </h1>
-    <a href="page2.html">page2</a>
+    <h1>This Is My First Website</h1>
+    <hr>
+
+    <h3>today i have learned the following things</h3>
+
+    <ol>
+
+        <li>Bascis of html</li>
+        <li>attaching a link</li>
+
+    </ol>
+
+    <hr>
+
+    <a href="https://google.com">google</a>
+
+    <hr>
+
+
+    <h2>the end</h2>
 </body>
 </html>
