--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
 
     <h2>the end</h2>
     <a href="Sai_NOTES">notes</a>
+    <a href="Note 10-Aug-2023 (2).pdf">linktodownloadnotes</a>
 </body>
 </html>
