--- a/index.html
+++ b/index.html
@@ -6,27 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This Is My First Website</h1>
-    <hr>
-
-    <h3>today i have learned the following things</h3>
-
-    <ol>
-
-        <li>Bascis of html</li>
-        <li>attaching a link</li>
-
-    </ol>
-
-    <hr>
-
-    <a href="https://google.com">google</a>
-
-    <hr>
-
-
-    <h2>the end</h2>
-    <a href="Sai_NOTES">notes</a>
-    <a href="Note 10-Aug-2023 (2).pdf">linktodownloadnotes</a>
+    <img src="image.jpg" width="350">
 </body>
 </html>
