--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="image.jpg" width="1000">
+    <video src="IMG_0012.mov" width="300" autoplay ></video>
+    
 </body>
 </html>
