--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <video src="IMG_0012.mov" width="300" autoplay ></video>
+    <video src="IMG_0012.mov" width="300" controls loop ></video>
     
 </body>
 </html>
