--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <video src="IMG_0012.mov" width="300" controls loop ></video>
-    <iframe src="https://www.google.com" frameborder="0"></iframe>
+ <hr>   <iframe src="https://www.google.com" frameborder="0"></iframe>
 </body>
 </html>
