--- a/index.html
+++ b/index.html
@@ -6,7 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <video src="IMG_0012.mov" width="300" controls loop ></video>
- <hr>   <iframe src="htt" width="1000" height="200" frameborder="0"></iframe>
+    <table>
+<thead>
+    <tr>
+        <th>Name</th>
+        <th>Roll no</th>
+        <th>Marks</th>
+    </tr>
+</thead>
+
+<tbody>
+    <tr>
+        <td>Sai Dolesh</td>
+        <td>126160006</td>
+        <td>100</td>
+    </tr>
+</tbody>
+
+<tfoot>
+
+    <th>Feedback:Good Student</th>
+</tfoot>
+
+    </table>
 </body>
 </html>
