--- a/index.html
+++ b/index.html
@@ -4,30 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table>
-<thead>
-    <tr>
-        <th>Name</th>
-        <th>Roll no</th>
-        <th>Marks</th>
-    </tr>
-</thead>
-
-<tbody>
-    <tr>
-        <td>Sai Dolesh</td>
-        <td>126160006</td>
-        <td>100</td>
-    </tr>
-</tbody>
-
-<tfoot>
-
-    <th>Feedback:Good Student</th>
-</tfoot>
-
-    </table>
+    <header>
+        <h1>Apni Kaksha</h1>
+    </header>
 </body>
 </html>
