--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Apni Kaksha</h1>
-    </header>
+    <img src="image.jpg" alt="this is a image" width="300" height="500">
 </body>
 </html>
