--- a/index.html
+++ b/index.html
@@ -5,12 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="syntax.css">
+
 </head>
 <body>
-    <div class="background">
+<header>
+    <h1>
+        Contact Form
+    </h1>
 
-        <h1>Borra Sai Dolesh</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora temporibus beatae ipsum accusamus. Placeat iste ex explicabo nulla aspernatur, quia sint commodi, porro dolores error quis ullam soluta quisquam recusandae.</p>
-    </div>
+    <h3>Please fill all the texts in the field</h3>
+
+</header>
+<section>
+    <p>
+        Your Name:
+        <br>
+        <input type="text" name="name" id="name" placeholder="Your Full Name">
+
+    </p>
+
+    <p>
+        Your Email:
+        <br>
+        <input type="email" name="email" id="email" placeholder="Valid Email Address">
+    </p>
+<p>
+    Message:
+    <br>
+
+    <textarea name="Message" id="Message" cols="60" rows="10" placeholder="Your Message to us"></textarea>
+</p>
+<p>
+    Subject:
+    <br>
+    <input type="text" name="Subject" id="Subject" placeholder="">
+</p>
+<p>
+    <input type="submit" value="Submit">
+    </p>
+
+</section>
+
 </body>
 </html>
