--- a/index.html
+++ b/index.html
@@ -5,46 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="syntax.css">
-
 </head>
 <body>
-<header>
-    <h1>
-        Contact Form
-    </h1>
-
-    <h3>Please fill all the texts in the field</h3>
-
-</header>
-<section>
-    <p>
-        Your Name:
-        <br>
-        <input type="text" name="name" id="name" placeholder="Your Full Name">
-
-    </p>
-
-    <p>
-        Your Email:
-        <br>
-        <input type="email" name="email" id="email" placeholder="Valid Email Address">
-    </p>
-<p>
-    Message:
-    <br>
-
-    <textarea name="Message" id="Message" cols="60" rows="10" placeholder="Your Message to us"></textarea>
-</p>
-<p>
-    Subject:
-    <br>
-    <input type="text" name="Subject" id="Subject" placeholder="">
-</p>
-<p>
-    <input type="submit" value="Submit">
-    </p>
-
-</section>
-
+    <h1>Sai Dolesh Borra Is A Good Student</h1>
+    <h3>Sai Dolesh Borra Is A Student</h3>
 </body>
 </html>
