--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="syntax.css">
+
+    <style>
+        @media screen and (width:200px) and (orientation:landscape){
+            body{
+                color: aqua;
+            }
+            
+        }
+    </style>
 </head>
 <body>
     <h1>Sai Dolesh Borra Is A Good Student</h1>
