--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" href="syntax.css">
 
     <style>
-        @media screen and (width:200px) and (orientation:landscape){
-            body{
-                color: aqua;
-            }
-            
+       @media not all and (orientation:landscape){
+        body{
+            color: blue;
         }
+       }
     </style>
 </head>
 <body>
